src/test/ui/feature-gates/feature-gate-extern_crate_item_prelude.stderr
error[E0658]: use of extern prelude names introduced with `extern crate` items is unstable (see issue #54658)
  --> $DIR/feature-gate-extern_crate_item_prelude.rs:26:9
   |
LL |     use alloc as _;
   |         ^^^^^
   |
   = help: add #![feature(extern_crate_item_prelude)] to the crate attributes to enable

error[E0658]: use of extern prelude names introduced with `extern crate` items is unstable (see issue #54658)
  --> $DIR/feature-gate-extern_crate_item_prelude.rs:28:9
   |
LL |     use alloc::boxed;
   |         ^^^^^
   |
   = help: add #![feature(extern_crate_item_prelude)] to the crate attributes to enable

error[E0658]: use of extern prelude names introduced with `extern crate` items is unstable (see issue #54658)
  --> $DIR/feature-gate-extern_crate_item_prelude.rs:33:11
   |
LL |     use ::alloc;
   |           ^^^^^
   |
   = help: add #![feature(extern_crate_item_prelude)] to the crate attributes to enable

error[E0658]: use of extern prelude names introduced with `extern crate` items is unstable (see issue #54658)
  --> $DIR/feature-gate-extern_crate_item_prelude.rs:35:11
   |
LL |     use ::alloc::boxed;
   |           ^^^^^
   |
   = help: add #![feature(extern_crate_item_prelude)] to the crate attributes to enable

error[E0658]: use of extern prelude names introduced with `extern crate` items is unstable (see issue #54658)
  --> $DIR/feature-gate-extern_crate_item_prelude.rs:9:17
   |
LL |         let v = alloc::vec![0];
   |                 ^^^^^
   |
   = help: add #![feature(extern_crate_item_prelude)] to the crate attributes to enable

error[E0658]: use of extern prelude names introduced with `extern crate` items is unstable (see issue #54658)
  --> $DIR/feature-gate-extern_crate_item_prelude.rs:11:18
   |
LL |         type A = alloc::boxed::Box<u8>;
   |                  ^^^^^
   |
   = help: add #![feature(extern_crate_item_prelude)] to the crate attributes to enable

error[E0658]: use of extern prelude names introduced with `extern crate` items is unstable (see issue #54658)
  --> $DIR/feature-gate-extern_crate_item_prelude.rs:18:19
   |
LL |         let v = ::alloc::vec![0];
   |                   ^^^^^
   |
   = help: add #![feature(extern_crate_item_prelude)] to the crate attributes to enable

error[E0658]: use of extern prelude names introduced with `extern crate` items is unstable (see issue #54658)
  --> $DIR/feature-gate-extern_crate_item_prelude.rs:20:20
   |
LL |         type A = ::alloc::boxed::Box<u8>;
   |                    ^^^^^
   |
   = help: add #![feature(extern_crate_item_prelude)] to the crate attributes to enable

error[E0658]: use of extern prelude names introduced with `extern crate` items is unstable (see issue #54658)
  --> $DIR/feature-gate-extern_crate_item_prelude.rs:42:14
   |
LL |     type A = core::boxed::Box<u8>;
   |              ^^^^
   |
   = help: add #![feature(extern_crate_item_prelude)] to the crate attributes to enable

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0658`.
